--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -73,6 +73,7 @@ Zeno Dark Rose:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -305,6 +306,7 @@ Zeno Dark Purple:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -531,6 +533,7 @@ Zeno Dark Blue:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -757,6 +760,7 @@ Zeno Dark Aqua:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -983,6 +987,7 @@ Zeno Dark Green:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1209,6 +1214,7 @@ Zeno Dark Yellow:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1436,6 +1442,7 @@ Zeno Dark Orange:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1662,6 +1669,7 @@ Zeno Dark Coral:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1888,6 +1896,7 @@ Zeno Dark Pink:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2114,6 +2123,7 @@ Zeno Dark Gray:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2344,6 +2354,7 @@ Zeno Light Rose:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2570,6 +2581,7 @@ Zeno Light Purple:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2796,6 +2808,7 @@ Zeno Light Blue:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3022,6 +3035,7 @@ Zeno Light Aqua:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3248,6 +3262,7 @@ Zeno Light Green:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3474,6 +3489,7 @@ Zeno Light Yellow:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3700,6 +3716,7 @@ Zeno Light Orange:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3926,6 +3943,7 @@ Zeno Light Coral:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -4152,6 +4170,7 @@ Zeno Light Pink:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -4378,6 +4397,7 @@ Zeno Light Gray:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
+  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
