--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -73,7 +73,6 @@ Zeno Dark Rose:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -268,6 +267,8 @@ Zeno Dark Rose:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
   ## Funciona, treu només els recuadres del frontend, pero no de la resta de llocs, trobo millor la opció feta a dalt, tot i que peta en el borde de HACS
   ## Es nescessari tenir instal·lat el CARD MOD
   # card-mod-theme: "Zeno Dark Rose"
@@ -306,7 +307,6 @@ Zeno Dark Purple:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -501,6 +501,8 @@ Zeno Dark Purple:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -533,7 +535,6 @@ Zeno Dark Blue:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -728,6 +729,8 @@ Zeno Dark Blue:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -760,7 +763,6 @@ Zeno Dark Aqua:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -955,6 +957,8 @@ Zeno Dark Aqua:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -987,7 +991,6 @@ Zeno Dark Green:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1182,6 +1185,8 @@ Zeno Dark Green:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
   
@@ -1214,7 +1219,6 @@ Zeno Dark Yellow:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1409,6 +1413,8 @@ Zeno Dark Yellow:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -1442,7 +1448,6 @@ Zeno Dark Orange:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1637,6 +1642,8 @@ Zeno Dark Orange:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -1669,7 +1676,6 @@ Zeno Dark Coral:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -1864,6 +1870,8 @@ Zeno Dark Coral:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -1896,7 +1904,6 @@ Zeno Dark Pink:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2091,6 +2098,8 @@ Zeno Dark Pink:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -2123,7 +2132,6 @@ Zeno Dark Gray:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-background-color) #  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2318,6 +2326,8 @@ Zeno Dark Gray:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 #                                                                                                         
@@ -2354,7 +2364,6 @@ Zeno Light Rose:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2549,6 +2558,8 @@ Zeno Light Rose:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -2581,7 +2592,6 @@ Zeno Light Purple:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -2776,6 +2786,8 @@ Zeno Light Purple:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -2808,7 +2820,6 @@ Zeno Light Blue:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3003,6 +3014,8 @@ Zeno Light Blue:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -3035,7 +3048,6 @@ Zeno Light Aqua:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3230,6 +3242,8 @@ Zeno Light Aqua:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -3262,7 +3276,6 @@ Zeno Light Green:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3457,6 +3470,8 @@ Zeno Light Green:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -3489,7 +3504,6 @@ Zeno Light Yellow:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3684,6 +3698,8 @@ Zeno Light Yellow:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -3716,7 +3732,6 @@ Zeno Light Orange:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -3911,6 +3926,8 @@ Zeno Light Orange:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -3943,7 +3960,6 @@ Zeno Light Coral:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -4138,6 +4154,8 @@ Zeno Light Coral:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -4170,7 +4188,6 @@ Zeno Light Pink:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -4365,6 +4382,8 @@ Zeno Light Pink:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
 
 
 
@@ -4397,7 +4416,6 @@ Zeno Light Gray:
   text-primary-color: "#E5E5E5"
   disabled-text-color: var(--disabled-color)
   text-on-state-color: var(--ha-card-background)
-  text-light-primary-color: var(--primary-text-color)
   ### Sidebar colors
   sidebar-icon-color: var(--primary-color)
   sidebar-text-color: var(--primary-text-color)
@@ -4592,3 +4610,5 @@ Zeno Light Gray:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
+  ### Color del globos del text % de les llums etc
+  clear-background-color: var(--ha-card-background)
